# ChronosGraphics

./: .gitignore  .gitmodules  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/APITesting/: CMakeLists.txt  main.cpp
Resources/Pipelines/Testing/: Testing.pipeline  testing.hlsl  testingFragment.fxc  testingFragment.hlsl  testingVertex.fxc  testingVertex.hlsl
Source/: CMakeLists.txt  CodeLayout.md  Graphics.hpp  Log.cpp  Log.hpp  Pipeline.cpp  Pipeline.hpp  Platform.hpp  RenderDevice.cpp  RenderDevice.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
Source/DX12/: DX12_Pipeline.cpp  DX12_Pipeline.hpp  DX12_RenderDevice.cpp  DX12_RenderDevice.hpp
Source/GLES/: GLES_RenderDevice.cpp  GLES_RenderDevice.hpp
Source/Vulkan/: Vulkan_RenderDevice.cpp  Vulkan_RenderDevice.hpp
cmake/modules/: FindD3D12.cmake
